--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.2",
     "multer": "^1.4.5-lts.2",
+    "nodemailer": "^6.10.1",
     "pg": "^8.14.1",
     "sqlite3": "^5.1.7",
     "winston": "^3.17.0"
