--- a/.env
+++ b/.env
@@ -7,5 +7,5 @@ JWT_SECRET=mysecretkey123
 
 NODE_ENV=production
 
-EMAIL_USER=haitamagnao75@gmail.com
-EMAIL_PASS=vekx lmpv sags yvaf
+EMAIL_USER=email
+EMAIL_PASS=password
