--- a/.env
+++ b/.env
@@ -1,14 +1,16 @@
-DB_USER=postgres
-DB_HOST=localhost
-DB_NAME=bookstore
-DB_PASSWORD="15975321"
-DB_PORT=5432
-JWT_SECRET=mysecretkey123
+DB_USER=database_user_here
+DB_HOST=database_host_here
+DB_NAME=database_name_here
+DB_PASSWORD=database_password_here
+DB_PORT=database_port_here
+JWT_SECRET=your_jwt_secret_here
 
-NODE_ENV=production
+NODE_ENV=development_or_production
 
-EMAIL_USER=haitamagnao75@gmail.com
-EMAIL_PASS=vekx lmpv sags yvaf
-PAYPAL_CLIENT_ID=AT9BqNJTCTq5te_CuJKTenoHGQokRfxj49Tm8dm0b-demj7OWGbKMmCbEYOmklCmfBKwOLaIgbyTbbug
-PAYPAL_CLIENT_SECRET=EAKXVgw3BCELrZBgOUXaHH9VRM-wQY6EbwpXeuBuN2SaCZXtoe777zdqj6k__Gxn02EHRjvLdBf6VxzF
+EMAIL_USER=your_email@example.com
+EMAIL_PASS=your_email_password
+
+PAYPAL_CLIENT_ID=your_paypal_client_id_here
+PAYPAL_CLIENT_SECRET=your_paypal_client_secret_here
+
 BASE_URL=http://localhost:3000
